# robot_assignment

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  package.xml  package_fixed.xml  plugin.xml  quick_start.sh  requirements.txt  setup_jupiter_juno.sh  test_system_standalone.py
Eye_Detector_Script/: main.py  requirements.txt
config/: drowsiness_config.yaml  jupiter_juno_perspective.perspective
jupiter_juno/: __init__.py  alert_system_node.py  gemini_conversation_node.py  gui_monitor_node.py  speech_recognition_node.py  tts_node.py
jupiter_juno_robot/: IMPLEMENTATION_SUMMARY.md  README.md  quick_start.sh  requirements.txt  test_system_standalone.py
jupiter_juno_robot/src/jupiter_juno/: package.xml  setup.py
jupiter_juno_robot/src/jupiter_juno/config/: drowsiness_config.yaml
jupiter_juno_robot/src/jupiter_juno/jupiter_juno/: alert_system_node.py  eye_detector_node.py  gemini_conversation_node.py  speech_recognition_node.py  tts_node.py
jupiter_juno_robot/src/jupiter_juno/launch/: jupiter_juno_launch.launch  jupiter_juno_launch.py
launch/: jupiter_juno_complete_system.launch  jupiter_juno_launch_no_gui.launch  jupiter_juno_monitor_only_launch.launch  jupiter_juno_standalone_gui_launch.launch  jupiter_juno_with_gui_launch.launch
src/: CMakeLists.txt  standalone_gui.py
src/jupiter_juno/: CMakeLists.txt
src/jupiter_juno/jupiter_juno/: __init__.py  jupiter_juno_monitor.py
src/launch/: jupiter_juno_with_gui_launch.launch
