<?xml version="1.0"?>
<package format="2">
  <name>jupiter_juno</name>
  <version>1.0.0</version>
  <description>Jupiter Juno Driver Drowsiness Detection System for ROS Noetic</description>
  <maintainer email="team@jupiterjuno.com">Jupiter Juno Team</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-pyqt5.qtwidgets</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <!-- Python 3 dependencies for ROS Noetic -->
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python3-setuptools</exec_depend>

  <export>
    <!-- Export for catkin -->
  </export>
</package> 