<?xml version="1.0"?>
<package>
  <name>jupiter_juno</name>
  <version>1.0.0</version>
  <description>Jupiter Juno Driver Drowsiness Detection System</description>
  <maintainer email="team@jupiterjuno.com">Jupiter Juno Team</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>python-opencv</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-scipy</run_depend>
  <run_depend>roslaunch</run_depend>

  <export>
  </export>
</package>
